# pyoload

./: .dockerignore  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README.pypi.rst  README.rst  docker-compose.yml  logs.yaml  pyoload.sublime-workspace  pyproject.toml  testing.py
.github/workflows/: pyre.yml  python-publish.yml  test.yml
dockerfiles/: dev.dockerfile
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  oload-or-multi.rst  report.rst  requirements.txt  usage.rst  whatsnew.rst
docs/_static/: hexa.css  hexa.css.map  nightly.js  response.js  w3.css.map
docs/source/: conf.py  usage.rst
src/: .coveragerc  annotate.py  del.py  del.py.del  del.txt  py_overload.py  pyoload.py  setup.py  test-cov.bat
src/pip_package_template_docker/: __init__.py
src/py_overload/: __init__.py
src/pyoload/: __init__.py  taskama.sublime-project  taskama.sublime-workspace
src/tests/: CastTest.py  CheckTest.py  OverloadTest.py  __init__.py  logs.yaml  test_annotate.py  test_cast.py  test_check.py  test_errors.py  test_overload.py  test_placeholder.py  test_speed.py  test_values.py
